--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
-    "sass-resources-loader": "^2.1.1",
+    "file-loader": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "swiper": "^5.4.5",
+    "url-loader": "^2.3.0",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.2",
     "vue-router": "^3.5.1"
@@ -22,12 +25,17 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^3.6.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-loader": "^7.3.1",
+    "sass-resources-loader": "^2.1.1",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
