--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url-loader": "^2.3.0",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.2",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
